--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,6 @@
 	path = meteor-coordinates-map
 	url = https://github.com/jfinley6/meteor-coordinates-map
 
-[submodule "meteor-coordinates-map"]
+[submodule "phase-1-project"]
 	path = phase-1-project
 	url = https://github.com/jfinley6/phase-1-project
